# dsless

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: architecture.md
src/: cache.rs  layout.rs  main.rs  render.rs  tui.rs  unicode.rs  worker.rs
src/source/: mod.rs  parquet.rs
