[package]
name = "dsless"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
arrow = { version = "58", features = ["prettyprint"] }
parquet = { version = "58", features = ["arrow", "zstd"] }
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
lru = "0.16"
